revert .html change and fix overflowed items
TODO fix absolutely positioned crap

--- a/css/_base.page.scss
+++ b/css/_base.page.scss
@@ -7,6 +7,7 @@ html {
     color: $text-color;
     min-height: 100%;
     position: relative;
+    overflow-x: hidden;
     overflow-y: scroll;
     font: 400 normal #{$base-font-size}/1.875 $primary-font-stack;
     text-rendering: optimizeLegibility;
