--- a/css/ravenous.css
+++ b/css/ravenous.css
@@ -421,6 +421,7 @@ html {
     color: #4f4f4f;
     min-height: 100%;
     position: relative;
+    overflow-x: hidden;
     overflow-y: scroll;
     font: 400 normal 16px/1.875 "ff-meta-serif-web-pro", Georgia, serif;
     text-rendering: optimizeLegibility;
